// Copyright 2024 Incident Assistant AI
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package kube_controller_event;

option go_package = "github.com/incidentassistant/k8s-agent/proto/event";

service EventService {
  rpc EmitEvent (EventMessage) returns (EventResponse) {}
}

message EventMessage {
  string namespace = 1;
  string resourceKey = 2;
  string eventType = 3;
  bytes data = 4; // Raw event data
  string apiKey = 5; // API key for authentication
}

message EventResponse {
  bool acknowledged = 1;
}
